# multimodal-liver-tumor-classification

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  release_manifest.json  requirements.txt
.github/workflows/: ci.yml  release-check.yml
configs/: evaluation.yaml  paths.example.yaml  radiomics.yaml  training.yaml
data/: README.md
docs/: artifact_contracts.md  datasets.md  external_stress_test.md  fusion_definition.md  manuscript_repository_alignment.md  model_architecture.md  model_card.md  preprocessing.md  privacy_and_data_boundary.md  repository_scope.md  reproducibility.md  results_provenance.md  scientific_scope.md
notebooks/: README.md
notebooks/01_data_and_preprocessing/: 01_internal_cohort_and_splits.ipynb  02_historical_independent_phase_preprocessing.ipynb
notebooks/02_internal_models/: 03_single_phase_cnn.ipynb  04_multiphase_cnn.ipynb  05_radiomics_lightgbm.ipynb
notebooks/03_fusion_and_internal_results/: 06_late_fusion_internal_evaluation.ipynb
notebooks/04_external_stress_test/: 07_external_data_acquisition.ipynb  08_external_dicom_to_nifti.ipynb  09_external_tumor_mask_preprocessing.ipynb  10_external_mask_density_qc.ipynb  11_external_liver_mask_adapter.ipynb  (+2 more)
results/: README.md
results/figures/: README.md
scripts/: analyze_external_sex_sensitivity.py  audit_c2_crop_retention.py  build_release_manifest.py  generate_aggregate_figures.py  recalculate_delong_summary.py  recalculate_internal_metrics.py  smoke_test.py  validate_aggregate_results.py  validate_release.py
tests/: test_config.py  test_external.py  test_fusion_features.py  test_metrics.py  test_preprocessing.py  test_release_safety.py  test_result_integrity.py
(+22 files in other folders)
