[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liver-tumor-pipeline"
version = "1.1.0"
description = "Auditable analysis utilities for multiphase CT liver-tumor classification"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Wen Xuezhi"},
  {name = "Hamza El Massaoudy"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "numpy>=1.24,<2.3",
  "pandas>=2.0,<3",
  "PyYAML>=6,<7",
  "scikit-learn>=1.3,<2",
]

[project.optional-dependencies]
workflow = [
  "jupyterlab>=4,<5",
  "lightgbm>=4,<5",
  "matplotlib>=3.7,<4",
  "monai>=1.3,<2",
  "nibabel>=5,<6",
  "pydicom>=2.4,<4",
  "pyarrow>=14,<23",
  "pyradiomics>=3,<4",
  "requests>=2.31,<3",
  "scipy>=1.10,<2",
  "SimpleITK>=2.3,<3",
  "torch>=2,<3",
]
test = [
  "pytest>=8,<9",
  "ruff>=0.12,<1",
]

[project.urls]
Repository = "https://github.com/hamzaelmassaoudy/multimodal-liver-tumor-classification"
Issues = "https://github.com/hamzaelmassaoudy/multimodal-liver-tumor-classification/issues"

[project.scripts]
liver-release-validate = "liver_tumor_pipeline.validation:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
